--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,6 @@
     <string name="app_name">Green Solutions</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="default_web_client_id">384756580893-vvci5f6ton9cddcjal5vc621vk2j3sg0.apps.googleusercontent.com</string>
+
 </resources>
